optimized the replace method in preprocessor